<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lty.tianyu_li_215211123.MainActivity">


    <TextView
        android:id="@+id/app_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextColor"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/About_Deakin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/bottonColor"
        android:onClick="GotoAboutDeakinActivity"
        android:text="@string/About_Deakin"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/Locations_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/About_Deakin_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/bottonColor"
        android:text="@string/Locations"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/Campus_Maps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Locations_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/bottonColor"
        android:text="@string/Campus_Maps"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/Quick_link_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Campus_Maps_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/bottonColor"
        android:onClick="GotoQuickLinkActivity"
        android:text="@string/Quick_Links"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/MessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Quick_link_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="@android:color/transparent"
        android:onClick="GotoMessageActivity"
        app:srcCompat="@drawable/message" />

    <ImageButton
        android:id="@+id/PlayButton"
        android:onClick="GotoIntroduceVideoActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/MessageButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/play" />


</RelativeLayout>
