<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_deakin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lty.tianyu_li_215211123.AboutDeakinActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="260dp"
        app:srcCompat="@drawable/deakin" />


    <Button
        android:id="@+id/DeakinWeb_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="161dp"
        android:layout_marginStart="35dp"
        android:background="@color/bottonColor"
        android:text="@string/Deakin_Web"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/AboutDeakin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DeakinWeb_button"
        android:layout_alignBottom="@+id/DeakinWeb_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:background="@color/bottonColor"
        android:text="@string/About_Deakin"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/Contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/DeakinWeb_button"
        android:layout_alignStart="@+id/DeakinWeb_button"
        android:layout_below="@+id/AboutDeakin_button"
        android:layout_marginTop="51dp"
        android:background="@color/bottonColor"
        android:text="Contact"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/Find_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Contact_button"
        android:layout_alignEnd="@+id/AboutDeakin_button"
        android:background="@color/bottonColor"
        android:text="@string/Find_course"
        android:textColor="@android:color/white" />

</RelativeLayout>
